css/styles.css
body,html {
    height: 100%;
    margin: 0%;
    font-family: Arial, Helvetica, sans-serif;
}

.bg{
    /*image used*/
    background-image: url("../img/web-development-background-8.jpg");

    /*Full height*/
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

h1 {
    display: block;
    font-size: 64px;
    text-align: center;
    color: #131111;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
  }

.nav_bar {
    background-color: rgb(109, 101, 101);
    overflow: hidden;
    transition: top 0.3s;
  }
  
  /* Style the links inside the navigation bar */
  .nav_bar a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 24px;
  }
  
  /* Change the color of links on hover */
  .nav_bar a:hover {
    background-color: #ddd;
    color: black;
  }
  
  /* Add a color to the active/current link */
  .nav_bar a.active {
    background-color: #1c1f1e;
    color: white;
  }

  /* Hide the link that should open and close the nav_bar on small screens */
.nav_bar .icon {
    display: none;
  }

   /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the nav_bar (.icon) */
@media screen and (max-width: 600px) {
    .nav_bar a:not(:first-child) {display: none;}
    .nav_bar a.icon {
      float: right;
      display: block;
    }
  }
  
  /* The "responsive" class is added to the nav_bar with JavaScript when the user clicks on the icon. This class makes the nav_bar look good on small screens (display the links vertically instead of horizontally) */
  @media screen and (max-width: 600px) {
    .nav_bar.responsive {position: relative;}
    .nav_bar.responsive a.icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .nav_bar.responsive a {
      float: none;
      display: block;
      text-align: left;
    }
  } 

  /*Style on page_main class*/
  .page_main{
    display: block;
    font-size: 32px;
    text-align: center;
    color: #131111;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
  }

/*Styling the aside bar with social media */
   /* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
.icon-bar {
    position: fixed;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
  
  /* Style the icon bar links */
  .icon-bar a {
    display: block;
    text-align: center;
    padding: 16px;
    transition: all 0.3s ease;
    color: white;
    font-size: 20px;
  }
  
  /* Style the social media icons with color, if you want */
  .icon-bar a:hover {
    background-color: #000;
  }
  
 
  .google {
    background: #dd4b39;
    color: white;
  }
  
  .linkedin {
    background: #007bb5;
    color: white;
  }
  
  .youtube {
    background: #bb0000;
    color: white;
  } 

